@@ -35,6 +35,7 @@ $engine = array(
 	'output' => 'default.html', 		// output file name
 	'plugin' => 'plugin',			// form plugin (in 'name' dir)
 	'post-action' => 'post-action',		// action file executed after document addition (in transaction)
+	'attachments' => array(),		// associative array with directly pointed optional attachment files (key = label; value = full path file name)
 )
 
 ?>
