@@ -139,6 +139,7 @@ if (isset($_POST['document'])) {
 		// get plugin content
 		$SMARTY->assign('plugin_result', $result);
 		$SMARTY->assign('script_result', $script_result);
+		$SMARTY->assign('attachment_result', GenerateAttachmentHTML($engine, $document['attachments']));
 
 		// run template engine
 		if (file_exists($doc_dir . DIRECTORY_SEPARATOR . 'templates' . DIRECTORY_SEPARATOR
@@ -177,6 +178,17 @@ if (isset($_POST['document'])) {
 			$attachment['main'] = false;
 			$files[] = $attachment;
 		}
+		if (!empty($document['attachments']))
+			foreach ($document['attachments'] as $attachment => $value) {
+				$filename = $engine['attachments'][$attachment];
+				$files[] = array(
+					'tmpname' => null,
+					'name' => $filename,
+					'type' => mime_content_type($filename),
+					'md5sum' => md5_file($filename),
+					'main' => false,
+				);
+			}
 
 	if (empty($files) && empty($document['templ']))
 		$error['files'] = trans('You must to specify file for upload or select document template!');
@@ -202,7 +214,12 @@ if (isset($_POST['document'])) {
 		if (!$error) {
 			foreach ($files as $file) {
 				@mkdir($file['path'], 0700);
-				if (!file_exists($file['newfile']) && !@rename($file['tmpname'], $file['newfile'])) {
+				if (empty($file['tmpname'])) {
+					if (!@copy($file['name'], $file['newfile'])) {
+						$error['files'] = trans('Can\'t save file in "$a" directory!', $file['path']);
+						break;
+					}
+				} elseif (!file_exists($file['newfile']) && !@rename($file['tmpname'], $file['newfile'])) {
 					$error['files'] = trans('Can\'t save file in "$a" directory!', $file['path']);
 					break;
 				}
@@ -306,7 +323,7 @@ if (isset($_POST['document'])) {
 		foreach ($files as $file)
 			$DB->Execute('INSERT INTO documentattachments (docid, filename, contenttype, md5sum, main)
 				VALUES (?, ?, ?, ?, ?)', array($docid,
-					$file['name'],
+					basename($file['name']),
 					$file['type'],
 					$file['md5sum'],
 					$file['main'] ? 1 : 0,
