@@ -155,6 +155,8 @@ version ?.??.?? (????-??-??):
   - enhancement: multi document operations are possible from customer document box [chilan]
   - enhancement: lms-notify.php: added documents type support which takes document end
     dates into consideration [chilan]
+  - enhancement: allow to select permanent attachments which are included with generated
+    document [chilan]
 
 version 1.11.22 (2017-06-08):
 
